[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "python-stix2-identity-contact-information-extension"
version = "0.1"
description = "Implementation of python API for the extensions to the STIX 2.1 identity contact information stub"
dependencies = [
    "stix2"
]

[project.optional-dependencies]
dev = ["pytest", "tox"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"