[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "iep-marking-definition-762"
version = "0.1"
description = "Implementation of python API for the IEP Data Markings extension for STIX 2.1"
dependencies = [
    "stix2"
]

[project.optional-dependencies]
dev = ["pytest", "tox"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"

[tool.ruff.lint]
extend-select = ["E501"]

[tool.ruff.lint.pycodestyle]
max-line-length = 160