[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "python-stix2-observed-string-extension-8b1aa84c"
version = "0.1"
description = "Implementation of python API for the extension to the STIX 2.1 observed string"
dependencies = [
    "stix2"
]

[project.optional-dependencies]
dev = ["pytest", "tox"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
