[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "python-stix2-pap-f8d"
version = "0.1"
description = "Implementation of python API for PAP Data Marking Extensions for STIX 2.1"
dependencies = [
    "stix2"
]

[project.optional-dependencies]
dev = ["pytest", "tox"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"