[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "python-stix2-iep-data-markings-extension-762e2e97"
version = "0.1"
description = "Implementation of python API for the IEP Data Markings extension for STIX 2.1"
dependencies = [
    "stix2"
]

[project.optional-dependencies]
dev = ["pytest", "tox"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
